bug fixed for HTMLExporter

--- a/address.html
+++ b/address.html
@@ -7,18 +7,12 @@
 		<table>
 			<thead>
 				<tr>
-					<th>addrId</th><th>street</th><th>city</th><th>state</th><th>zip</th>
+addrId</th><th>street</th><th>city</th><th>state</th><th>zip</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr><td>0</td><td>12 MyStreet</td><td>Berkeley</td><td>CA</td><td>99998</td></tr>
 				<tr><td>1</td><td>34 Quarry Ln.</td><td>Bedrock</td><td>AZ</td><td>00000</td></tr>
-				<tr><td>0</td><td>12 MyStreet</td><td>Berkeley</td><td>CS</td><td>12345</td></tr>
-				<tr><td>1</td><td>12 MyStreet</td><td>Berkeley</td><td>CS</td><td>12345</td></tr>
-				<tr><td>3</td><td>24 MyStreet</td><td>Aerkeley</td><td>CB</td><td>11245</td></tr>
-				<tr><td>4</td><td>45 MyStreet</td><td>CArkeley</td><td>CW</td><td>12355</td></tr>
-				<tr><td>0</td><td>12 MyStreet</td><td>Berkeley</td><td>CA</td><td>99998</td></tr>
-				<tr><td>0</td><td>15 My</td><td>jeonju</td></tr>
 			</tbody>
 		</table>
 	</body>
