Fixed HTML format

--- a/address.html
+++ b/address.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>address</title>
-	</head>
+	<head></head>
 	<body>
 		<table>
+			<caption>address</caption>
 			<thead>
 				<tr>
-addrId</th><th>street</th><th>city</th><th>state</th><th>zip</th>
+					<th>addrId</th><th>street</th><th>city</th><th>state</th><th>zip</th>
 				</tr>
 			</thead>
 			<tbody>
