Use XML Importer and Exporter

--- a/address_html.html
+++ b/address_html.html
@@ -3,7 +3,7 @@
 	<head></head>
 	<body>
 		<table>
-			<caption>address</caption>
+			<caption>address_html</caption>
 			<thead>
 				<tr>
 					<th>addrId</th><th>street</th><th>city</th><th>state</th><th>zip</th>
